--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,9 +21,13 @@
 
     <string name="toast_loading">접속하는 중입니다.</string>
     <string name="toast_fail">접속 오류!!</string>
+    <string name="toast_login">로그인되었습니다.</string>
+    <string name="toast_disaccord">아이디와 비밀번호를 확인해주세요.</string>
+    <string name="toast_xxxxx">알수없는 오류!!</string>
 
 
-    <string name="default_url">http://10.131.158.132:8080/androidserver/login.do</string>
+    <string name="default_url">http://10.131.158.30:8080/androidserver/login.do</string>
+    <string name="member_url">http://10.131.158.30:8080/androidserver/login.do</string>
 
 
 
